CSS: Fix video gallery preview overflow

--- a/src/main/resources/templates/style.css
+++ b/src/main/resources/templates/style.css
@@ -1232,6 +1232,8 @@ input[type=checkbox]:checked ~ label > .gl-current-image {
     height: 100%;
     width: 100%;
     flex-grow: 1;
+    /* This line fixes (somehow) video size overflow */
+    min-height: 0;
     background-position: center;
     background-size: cover;
     /* Don't ALL show gall items, only first 5*/
